NetBSD Problem Report #50356
From www@NetBSD.org Thu Oct 22 12:43:56 2015
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
by mollari.NetBSD.org (Postfix) with ESMTPS id 4DB67A5864
for <gnats-bugs@gnats.NetBSD.org>; Thu, 22 Oct 2015 12:43:56 +0000 (UTC)
Message-Id: <20151022124354.3394AA6562@mollari.NetBSD.org>
Date: Thu, 22 Oct 2015 12:43:54 +0000 (UTC)
From: okuyama@flex.phys.tohoku.ac.jp
Reply-To: okuyama@flex.phys.tohoku.ac.jp
To: gnats-bugs@NetBSD.org
Subject: X server with wsfb broken on armeb environment
X-Send-Pr-Version: www-1.0
>Number: 50356
>Category: port-arm
>Synopsis: X server with wsfb broken on armeb environment
>Confidential: no
>Severity: critical
>Priority: high
>Responsible: port-arm-maintainer
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Thu Oct 22 12:45:00 +0000 2015
>Closed-Date: Mon Jan 09 00:07:25 +0000 2017
>Last-Modified: Mon Jan 09 00:07:25 +0000 2017
>Originator: Rin Okuyama
>Release: 7.99.21
>Organization:
Department of Physics, Tohoku University
>Environment:
NetBSD cubietruck 7.99.21 NetBSD 7.99.21 (CT) #0: Thu Oct 22 21:27:06 JST 2015 root@XXX:XXX evbarm
>Description:
Display output of X server with wsfb is terribly corrupted on armeb
environments. For example, see a miserable xeyes below:
https://twitter.com/LabDrunker/status/657169238948360192
Output for external X servers is sanity, and an other application using
wsfb, namely, pkgsrc/x11/mlterm works fine. These suggest that X server
is broken.
>How-To-Repeat:
Run X server with wsfb driver on armeb environments.
>Fix:
Codes in X.org distribution assumes little endian for arm machines.
Check __ARMEB__ macro appropriately. Then, output gets sanity:
https://twitter.com/LabDrunker/status/657169452610400256
--- xsrc/external/mit/xorg-server/dist/include/servermd.h.orig 2015-10-22 18:53:27.000000000 +0900
+++ xsrc/external/mit/xorg-server/dist/include/servermd.h 2015-10-22 20:29:52.000000000 +0900
@@ -83,11 +83,15 @@
#endif /* __avr32__ */
-/* XXX arm is not always LE */
#if defined(__arm32__) || defined(__arm__)
+#ifdef __ARMEB__
+#define IMAGE_BYTE_ORDER MSBFirst
+#define BITMAP_BIT_ORDER MSBFirst
+#else
#define IMAGE_BYTE_ORDER LSBFirst
#define BITMAP_BIT_ORDER LSBFirst
+#endif
#define GLYPHPADBYTES 4
#endif /* __arm32__ */
>Release-Note:
>Audit-Trail:
From: Tobias Nygren <tnn@NetBSD.org>
To: gnats-bugs@NetBSD.org
Cc:
Subject: Re: port-arm/50356: X server with wsfb broken on armeb environment
Date: Thu, 22 Oct 2015 15:23:14 +0200
On Thu, 22 Oct 2015 12:45:00 +0000 (UTC)
okuyama@flex.phys.tohoku.ac.jp wrote:
> Codes in X.org distribution assumes little endian for arm machines.
> Check __ARMEB__ macro appropriately. Then, output gets sanity:
Fix looks good to me. Btw upstream X.org has removed all MD definitions
from servermd.h and are using system provided BYTE_ORDER macros so we
don't need to upstream this.
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/50356 CVS commit: xsrc/external/mit/xorg-server/dist/include
Date: Thu, 22 Oct 2015 09:29:24 -0400
Module Name: xsrc
Committed By: christos
Date: Thu Oct 22 13:29:24 UTC 2015
Modified Files:
xsrc/external/mit/xorg-server/dist/include: servermd.h
Log Message:
PR/50356: Rin Okuyama: Arm is not always little endian.
To generate a diff of this commit:
cvs rdiff -u -r1.6 -r1.7 \
xsrc/external/mit/xorg-server/dist/include/servermd.h
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: Rin Okuyama <okuyama@flex.phys.tohoku.ac.jp>
To: gnats-bugs@NetBSD.org, tnn@NetBSD.org, christos@netbsd.org
Cc:
Subject: Re: port-arm/50356: X server with wsfb broken on armeb environment
Date: Thu, 22 Oct 2015 23:16:47 +0900
Thank you for your review and commitment!
State-Changed-From-To: open->pending-pullups
State-Changed-By: rin@NetBSD.org
State-Changed-When: Wed, 28 Dec 2016 21:33:27 +0000
State-Changed-Why:
Pull-up requested to netbsd-7.
From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/50356 CVS commit: [netbsd-7] xsrc/external/mit/xorg-server/dist/include
Date: Sat, 31 Dec 2016 07:40:24 +0000
Module Name: xsrc
Committed By: snj
Date: Sat Dec 31 07:40:24 UTC 2016
Modified Files:
xsrc/external/mit/xorg-server/dist/include [netbsd-7]: servermd.h
Log Message:
Pull up following revision(s) (requested by rin in ticket #1344):
xsrc/external/mit/xorg-server/dist/include/servermd.h: revision 1.7
PR/50356: Rin Okuyama: Arm is not always little endian.
To generate a diff of this commit:
cvs rdiff -u -r1.6 -r1.6.10.1 \
xsrc/external/mit/xorg-server/dist/include/servermd.h
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: pending-pullups->closed
State-Changed-By: rin@NetBSD.org
State-Changed-When: Mon, 09 Jan 2017 00:07:25 +0000
State-Changed-Why:
The fix is to be in NetBSD 7.1.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.