Pull up following revision(s) (requested by rin in ticket #1344): 	xsrc/external/mit/xorg-server/dist/include/servermd.h: revision 1.7 PR/50356: Rin Okuyama: Arm is not always little endian.